# Map2Curve

./: .gitignore  CMakeLists.txt  README.md  patch_linux.md
.github/workflows/: build-linux.yml  build-macos.yml  build.yml
header/: LSE.h  RMF.cpp  WAD3.cpp  blank.cpp  blank.h  brush.cpp  cmake_config.h  entity.cpp  face.cpp  file.cpp  file.h  frames.cpp  group.cpp  linux_compat.h  msvc_compat.h  msvc_compat_linux.h  settings.cpp  utils.cpp  vla_fix.h  vla_utils.h
